G/tests/fail/deref_nonptr.g
fn main() -> int {
    let x = 5
    let y = *x
    return 0
}
